--- a/ASPTest/Views/Shared/_LayoutPage1.cshtml
+++ b/ASPTest/Views/Shared/_LayoutPage1.cshtml
@@ -15,11 +15,15 @@
     <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-   
+
     <script src="~/statics/js/vendor/jquery-1.11.2.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
     <script src="/statics/js/plugins.js"></script>
     <script src="/statics/js/main.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <div>
         @RenderBody()
